--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     </div>
                     <p style="font-weight: bold">Inside Bravery Chef Hall</p>
                     <p>409 Travis St, Houston, TX 77002</p>
-                    <img class="animate-bottom" src="./images/bravery-city-hall.png" alt="city-map">
+                    <img class="animate-bottom" src="./images/bravery-city-hall.PNG" alt="city-map">
                 </div>
                 <div class="footer-content-divider animate-bottom">
                     <div class="social-menu">
